# pyosmium

./: .flake8  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.TXT  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  build-requirements.txt  mkdocs.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/actions/install-dependencies/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: build_wheels.yml  ci.yml
cmake/: FindOsmium.cmake  FindProtozero.cmake  version.py.tmpl
doc/: Makefile  conf.py  index.rst  intro.rst  ref_geom.rst  ref_index.rst  ref_io.rst  ref_osm.rst  ref_osmium.rst  ref_replication.rst  reference.rst  tools.rst  tools_get_changes.rst  tools_uptodate.rst  troubleshooting.rst  updating_osm_data.rst
docs/: Makefile  cookbooks.md  index.md  reference.md  user_manual.md
docs/cookbooks/: Adding-Node-Infos-To-Boundaries.ipynb  Adding-Route-Info-To-Ways.ipynb  Enhance-Tags.ipynb  Filter-Data-By-Geometry.ipynb  Filtering-Data-By-Tags.ipynb  Visualizing-Data-With-Geopandas.ipynb
docs/data/: buildings.opl  liechtenstein.osm.pbf
docs/man/: pyosmium-get-changes.1  pyosmium-up-to-date.1
docs/reference/: Area.md  Data-Writers.md  Dataclasses.md  Exceptions.md  File-Processing.md  Filters.md  Geometry-Functions.md  Handler-Processing.md  IO.md  Indexes.md  Replication.md  Thread-Safety.md
docs/user_manual/: 01-First-Steps.md  02-Extracting-Object-Data.md  03-Working-with-Geometries.md  04-Working-with-Filters.md  05-Working-with-Handlers.md  06-Writing-Data.md  07-Input-Formats-And-Other-Sources.md  08-Working-With-Change-Files.md  09-Working-With-History-Files.md  10-Replication-Tools.md
examples/: amenity_list.py  convert.py  convert_to_geojson.py  create_nodecache.py  detail_info.py  filter_coastlines.py  filter_waterway.py  normalize_boolean.py  osm_diff_stats.py  osm_file_stats.py  osm_replication_stats.py  osm_url_stats.py  overpass_geometry.py  pub_names.py  read_changes.py  road_length.py  test.osm  test.py  use_nodecache.py
lib/: area.cc  base_filter.h  base_handler.h  buffer_iterator.h  cast.h  empty_tag_filter.cc  entity_filter.cc  file_iterator.cc  filter.cc  generic_handler.hpp  generic_writer.hpp  geo_interface_filter.cc  geom.cc  handler_chain.h  id_filter.cc  id_tracker.cc  index.cc  io.cc  io.h  key_filter.cc  merge_input_reader.cc  merged_input.hpp  node_location_handler.cc  osm.cc  osm_base_objects.h  osm_helper.h  osm_wrapper.h  osmium.cc  osmium_module.h  python_handler.h  replication.cc  simple_handler.h  simple_writer.cc  simple_writer.h  std_pair.hpp  tag_filter.cc  win_boost_fix.hpp  write_handler.cc  write_handler.h  write_handler.hpp
man/: pyosmium-get-changes.1  pyosmium-up-to-date.1
osmium/: __init__.py  version.py
osmium/geom/: __init__.py
osmium/index/: __init__.py
osmium/osm/: __init__.py  mutable.py
osmium/replication/: server.py  utils.py
site-html/: .buildinfo  404.html  Makefile  genindex.html  index.html  intro.html  objects.inv  ref_geom.html  ref_index.html  ref_io.html  ref_osm.html  ref_osmium.html  ref_replication.html  reference.html  search.html  searchindex.js  sitemap.xml  tools.html  tools_get_changes.html  tools_uptodate.html  troubleshooting.html  updating_osm_data.html
site-html/_sources/: ref_geom.rst.txt  ref_index.rst.txt  ref_io.rst.txt  ref_osm.rst.txt  ref_osmium.rst.txt  ref_replication.rst.txt  tools_get_changes.rst.txt  tools_uptodate.rst.txt  troubleshooting.rst.txt  updating_osm_data.rst.txt
site-html/cookbooks/: index.html
site-html/cookbooks/Adding-Node-Infos-To-Boundaries/: index.html
site-html/cookbooks/Adding-Route-Info-To-Ways/: index.html
site-html/cookbooks/Enhance-Tags/: index.html
site-html/cookbooks/Filter-Data-By-Geometry/: index.html
site-html/cookbooks/Filtering-Data-By-Tags/: index.html
site-html/cookbooks/Visualizing-Data-With-Geopandas/: index.html
site-html/css/: extra.css  mkdocstrings.css
site-html/reference/: index.html
site-html/reference/Area/: index.html
site-html/reference/Data-Writers/: index.html
site-html/reference/Dataclasses/: index.html
site-html/reference/Exceptions/: index.html
site-html/reference/File-Processing/: index.html
site-html/reference/Filters/: index.html
site-html/reference/Geometry-Functions/: index.html
site-html/reference/Handler-Processing/: index.html
site-html/reference/IO/: index.html
site-html/reference/Indexes/: index.html
site-html/reference/Replication/: index.html
site-html/reference/Thread-Safety/: index.html
site-html/search/: search_index.json
site-html/user_manual/: index.html
site-html/user_manual/01-First-Steps/: index.html
site-html/user_manual/02-Extracting-Object-Data/: index.html
src/npyosmium/: __init__.py  _osmium.pyi  geom.pyi  helper.py  index.pyi  io.pyi  version.py
src/npyosmium/osm/: __init__.py  _osm.pyi  (+2 more)
src/osmium/: __init__.py  _osmium.pyi  area.pyi  back_reference_writer.py  file_processor.py  filter.pyi  forward_reference_writer.py  geom.pyi  helper.py  index.pyi  io.pyi  simple_handler.py  version.py  version.pyi
test/: conftest.py  example-test.osc  example-test.pbf  helpers.py  run_tests.py  test_area.py  test_back_reference_writer.py  test_dangling_references.py  test_empty_tag_filter.py  test_entity_filter.py  test_examples.py  test_file_processor.py  test_forward_reference_writer.py  test_geo_interface_filter.py  test_geom.py  test_helper.py  test_id_filter.py  test_id_tracker.py  test_index.py  test_index_idset.py  test_index_location.py  test_io.py  test_key_filter.py  test_memberlist.py  test_merge_input_reader.py  test_mergeinputreader.py  test_nodelist.py  test_osm.py  test_osmium.py  test_pyosmium_get_changes.py  test_pyosmium_up-to-date.py  test_replication.py  test_replication_utils.py  test_tag_filter.py  test_taglist.py  test_threaded.py  test_writer.py
tools/: npyosmium-get-changes  npyosmium-up-to-date  pyosmium-get-changes  pyosmium-up-to-date  pyosmium-update
travis/: build_macos.sh  build_manylinux.sh  test_docker.sh  test_manylinux.sh
(+29 files in other folders)
