[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "osmium"
description = "Python bindings for libosmium, the data processing library for OSM data"
requires-python = ">=3.8"

license = {text = 'BSD-2-Clause'}
authors = [
    {name = "Sarah Hoffmann", email = "lonvia@denofr.de"}
    ]
maintainers = [
    {name = "Sarah Hoffmann", email = "lonvia@denofr.de"}
    ]
keywords = ["OSM", "OpenStreetMap", "Osmium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "Typing :: Typed"
    ]
dependencies = [
    "requests"
    ]

version = "0.1.0"
