[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.9"]
build-backend = "scikit_build_core.build"

[project]
name = "osmium"
version = "4.1.0"
description = "Python bindings for libosmium, the data processing library for OSM data"
requires-python = ">=3.8"

license = {text = 'BSD-2-Clause'}
authors = [
    {name = "Sarah Hoffmann", email = "lonvia@denofr.de"}
    ]
maintainers = [
    {name = "Sarah Hoffmann", email = "lonvia@denofr.de"}
    ]
keywords = ["OSM", "OpenStreetMap", "Osmium"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "Typing :: Typed"
    ]
dependencies = [
    "requests"
    ]

[project.optional-dependencies]
tests = [
    'pytest',
    'pytest-httpserver',
    'pytest-run-parallel',
    'werkzeug',
    'shapely'
    ]
docs = [
    'mkdocs',
    'mkdocs-material',
    'mkdocstrings',
    'mkdocstrings-python',
    'mkdocs-autorefs',
    'mkdocs-gen-files',
    'mkdocs-jupyter',
    'argparse-manpage '
    ]

[project.scripts]
pyosmium-get-changes = "osmium.tools.pyosmium_get_changes:main"
pyosmium-up-to-date = "osmium.tools.pyosmium_up_to_date:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.15"

[tool.scikit-build.sdist]
cmake = true
exclude = ['**']
include = ['/src/**/*.py',
           '/src/**/*.pyi',
           '/src/osmium/py.typed',
           '/test/**/*.py',
           '/lib/**/*.cc',
           '/lib/**/*.h',
           '/cmake/*',
           '/docs/*.md',
           '/docs/*/*.md',
           '/docs/*/*.css',
           '/docs/cookbooks/*ipynb',
           '/docs/Makefile',
           '/examples/*py',
           '/mkdocs.yaml',
           '/pyproject.toml',
           '/README.*',
           '/CHANGELOG.md',
           '/CMakeLists.txt',
           '/LICENSE.TXT',
           '/contrib/libosmium/include',
           '/contrib/libosmium/CMakeLists.txt',
           '/contrib/libosmium/LICENSE',
           '/contrib/libosmium/README.md',
           '/contrib/protozero/include',
           '/contrib/protozero/CMakeLists.txt',
           '/contrib/protozero/LICENSE',
           '/contrib/protozero/README.md',
           ]
